@@ -87,6 +87,8 @@ unsigned IsMPICollective (unsigned EvType);
 #define SAMPLING_ADDRESS_TLB_LEVEL_EV        32000004
 #define SAMPLING_ADDRESS_TLB_HITORMISS_EV    32000005
 #define SAMPLING_ADDRESS_REFERENCE_COST_EV   32000006
+#define SAMPLING_ADDRESS_ALLOCATED_OBJECT_EV 32000007
+#define SAMPLING_ADDRESS_STATIC_OBJECT_EV    32000008
 
 #define APPL_EV                  40000001
 #define TRACE_INIT_EV            40000002
