@@ -23,7 +23,8 @@ common_FILES = \
  ../common/stack.c ../common/stack.h \
  ../common/bfd_manager.c ../common/bfd_manager.h \
  ../common/bfd_manager_extra.h ../common/bfd_data_symbol.h \
- ../common/thread_dependencies.c ../common/thread_dependencies.h
+ ../common/thread_dependencies.c ../common/thread_dependencies.h \
+ ../common/address_space.c ../common/address_space.h
 
 dimemas_FILES = \
  ../dimemas/dimemas_generator.c ../dimemas/dimemas_generator.h \
